[project]
name = "26-programing2"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "dspy>=3.0.4",
    "imbalanced-learn>=0.14.1",
    "jupyter>=1.1.1",
    "neologdn>=0.5.6",
    "openpyxl>=3.1.5",
    "pulp>=3.3.0",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
]
